--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
       <header>
         <div class="intestazione">
-
+          <div class="content-logo">
+            <img class="logo" src="img/logo.png" alt="">
+          </div>
         </div>
       </header>
 
