aggiunto google font

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>htmlcss-struttura-wp</title>
+    <link rel = "preconnect" href = "https://fonts.gstatic.com">
+<link href = "https://fonts.googleapis.com/css2? family = Montserrat & display = swap" rel = "foglio di stile ">famiglia = Montserrat: wght @ 200; 400; 700 &
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -13,6 +15,17 @@
           <div class="content-logo">
             <img class="logo" src="img/logo.png" alt="">
           </div>
+          <nav>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+
+            </ul>
+          </nav>
         </div>
       </header>
 
