corretto inserimento font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>htmlcss-struttura-wp</title>
     <link rel = "preconnect" href = "https://fonts.gstatic.com">
-<link href = "https://fonts.googleapis.com/css2? family = Montserrat & display = swap" rel = "foglio di stile ">famiglia = Montserrat: wght @ 200; 400; 700 &
+    <link rel = "preconnect" href = "https://fonts.gstatic.com">
+    <link href = "https://fonts.googleapis.com/css2? family = Montserrat: wght @ 200; 400; 700 & display = swap "rel =" stylesheet ">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -17,12 +18,12 @@
           </div>
           <nav>
             <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>FEATURES</li>
+              <li>EDITORIALS</li>
+              <li>ENVIRONMENT</li>
+              <li>BLOG</li>
+              <li>SHOP</li>
+              <li>CONTACT</li>
 
             </ul>
           </nav>
