--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
           <div class="content-logo">
             <img class="logo" src="img/logo.png" alt="">
           </div>
-          <nav>
+          <nav class="clearfix">
             <ul>
-              <li>FEATURES</li>
-              <li>EDITORIALS</li>
-              <li>ENVIRONMENT</li>
-              <li>BLOG</li>
-              <li>SHOP</li>
-              <li>CONTACT</li>
+              <li><a href="#">FEATURES</a></li>
+              <li><a href="#">EDITORIALS</a></li>
+              <li><a href="#">ENVIRONMENT</a></li>
+              <li><a href="#">BLOG</a></li>
+              <li><a href="#">SHOP</a></li>
+              <li><a href="#">CONTACT</a></li>
 
             </ul>
           </nav>
