--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
 
       <main>
         <section class="banner">
+          <div class="overlay">
+            <div class="banner-titolo">
+                <h2>Pretium ac placerat dui interdum ninc in eros urna morbi</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            </div>
+          </div>
         </section>
         <section class="corpo">
           <div class="head">
