--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         </section>
         <section class="corpo">
           <div class="head">
+            <h2>Leadership</h2>
+            <div>Fertenum urna a libero tempus</div>
           </div>
           <div class="clearfix row">
             <div class="colonne">
