--- a/index.html
+++ b/index.html
@@ -45,8 +45,13 @@
             <div>Fertenum urna a libero tempus</div>
           </div>
           <div class="clearfix row">
-            <div class="colonne">
-
+            <div class="colonne col-1">
+              <div class="col-img1">
+                <div class="overlay">
+                </div>
+              </div>
+              <h4>lorem</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
             <div class="colonne central">
 
