--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div>Fertenum urna a libero tempus</div>
           </div>
           <div class="clearfix row">
-            <div class="colonne col-1">
+            <div class="colonne col-left">
               <div class="col-img1">
                 <div class="overlay">
                 </div>
@@ -61,8 +61,13 @@
               <h4>ipsum</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
-            <div class="colonne">
-
+            <div class="colonne col-right">
+              <div class="col-img2">
+                <div class="overlay">
+                </div>
+              </div>
+              <h4>lorem</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
           </div>
         </section>
