--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
           </div>
         </section>
       </main>
-      <footer></footer>
+      <footer>Designed with<span id="love">&hearts;</span>
+      </footer>
   </div>
   </body>
 </html>
